Form recaptcha and ISW-1335 Cta button alignment issue

--- a/src/components/form-wffm/sass/form-registration.scss
+++ b/src/components/form-wffm/sass/form-registration.scss
@@ -8,6 +8,9 @@
             width: 40%;
             margin: 0 auto;
         }
+        @media only screen and (min-width: 1600px){
+            width: 30%;
+        }
         @include not-desktop {
           background: none !important;
           padding: 0;
