--- a/src/components/services-list/sass/_services-list.scss
+++ b/src/components/services-list/sass/_services-list.scss
@@ -124,6 +124,10 @@ section#services-list {
                 padding-right: 10px;
             }
         }
+        .service-list-btn{
+            margin-top: 50px;
+            padding-left:0;
+        }
         .single-image-thumbnail,.image-thumbnail {
             overflow: hidden;
             position: relative;
