--- a/src/sass/global/_banner.scss
+++ b/src/sass/global/_banner.scss
@@ -68,7 +68,7 @@
                 }
             }
             .hero-how-col{
-                padding: 45px 0px;
+                padding: 30px 0px;
                 @include mobile{
                     padding: 20px 0;
                 }
